# Beyond-All-Reason

./: pyproject.toml
luarules/gadgets/: agent_bridge_relay.lua
luaui/Widgets/: agent_bridge.lua  gui_com_nametags.lua  gui_speech_to_chat.lua  gui_tts_display.lua
tools/: SpeechToText.py  SpeechToTextDaemon.py  agent_bridge_client.py  bar_agent.py
